--- a/webapp/package.json
+++ b/webapp/package.json
@@ -7,6 +7,7 @@
     },
     "devDependencies": {
         "@inertiajs/vue3": "^1.0.0",
+        "@mdi/font": "^7.4.47",
         "@tailwindcss/forms": "^0.5.3",
         "@vitejs/plugin-vue": "^5.0.0",
         "@vue/server-renderer": "^3.4.0",
@@ -20,7 +21,9 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^5.1.2",
+        "maplibre-gl": "^4.6.0",
         "vue": "^3.4.38",
-        "vue-router": "^4.4.3"
+        "vue-router": "^4.4.3",
+        "vuetify": "^3.7.0"
     }
 }
