--- a/webapp/conf.d/supervisor/supervisord-dev.conf
+++ b/webapp/conf.d/supervisor/supervisord-dev.conf
@@ -22,6 +22,17 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes = 0
 stderr_logfile_maxbytes = 0
 
+[program:run-webapp]
+command=npm run dev --prefix /opt/webapp/
+autostart=true
+autorestart=true
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
+stdout_maxbytes=0
+stderr_maxbytes=0
+stdout_logfile_maxbytes = 0
+stderr_logfile_maxbytes = 0
+
 [program:crond]
 command=/usr/sbin/crond -f
 autostart=true
