--- a/webapp/conf.d/nginx/default.conf
+++ b/webapp/conf.d/nginx/default.conf
@@ -19,11 +19,12 @@ http {
     sendfile        on;
     tcp_nopush     on;
     tcp_nodelay    on;
-    keepalive_timeout  120;
+    keepalive_timeout  600;
     types_hash_max_size 2048;
 
     proxy_read_timeout 999999;
     client_max_body_size 4096M;
+    fastcgi_read_timeout 600s;
 
     gzip  on;
     gzip_disable "msie6";
@@ -33,9 +34,14 @@ http {
 
     access_log /dev/stdout main;
 
+    upstream php-handler {
+        server localhost:9000;
+        keepalive 8;
+    }
+
     server {
         listen 80;
-        root /opt/webapp/public;
+        root /var/www/webapp/public;
 
         index index.php index.html index.htm;
 
@@ -47,20 +53,15 @@ http {
         location ~ \.php$ {
             try_files $uri =404;
             fastcgi_split_path_info ^(.+\.php)(/.+)$;
-            fastcgi_pass localhost:9000;
+            fastcgi_pass php-handler;
+            fastcgi_keep_conn on;
+
             fastcgi_index index.php;
             include fastcgi_params;
-            # Block httpoxy attacks. See https://httpoxy.org/.
-            fastcgi_param HTTP_PROXY "";
+            
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             fastcgi_param PATH_INFO $fastcgi_path_info;
-
-            # FastCGI buffering settings
-            fastcgi_buffering on;
-            fastcgi_buffers 16 32k;
-            fastcgi_buffer_size 64k;
-            fastcgi_busy_buffers_size 128k;
-            fastcgi_temp_file_write_size 128k;
+            
         }
 
         error_page 404 /index.php;
