--- a/webapp/.env.example
+++ b/webapp/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Geoglify
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:fk/SXBB/v9eHj4vBPv1BMZWPvRULvEifdiHBrz2jKIQ=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
@@ -15,7 +15,7 @@ APP_MAINTENANCE_STORE=database
 BCRYPT_ROUNDS=12
 
 LOG_CHANNEL=stack
-LOG_STACK=single
+LOG_STACK=single,stdout
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
@@ -62,3 +62,15 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+LDAP_LOGGING=true
+LDAP_CONNECTION=default
+LDAP_HOST=ldap
+LDAP_USERNAME="admin,dc=geoglify,dc=com"
+LDAP_PASSWORD=geoglify
+LDAP_PORT=389
+LDAP_BASE_DN="DC=geoglify,DC=com"
+LDAP_TIMEOUT=5
+LDAP_SSL=false
+LDAP_TLS=false
+LDAP_DOMAIN=geoglify.com
