--- a/webapp/conf.d/php-fpm/php-fpm.conf
+++ b/webapp/conf.d/php-fpm/php-fpm.conf
@@ -1,11 +1,11 @@
 [www]
-listen = 9000
-listen.allowed_clients = 127.0.0.1
+listen = 127.0.0.1:9000
 user = www-data
 group = www-data
 pm = dynamic
-pm.max_children = 100
-pm.start_servers = 70
-pm.max_spare_servers = 80
-pm.min_spare_servers = 60
-access.format = "[php-fpm] [%t] %m %{REQUEST_SCHEME}e://%{HTTP_HOST}e%{REQUEST_URI}e took:%ds mem:%{mega}Mmb cpu:%C%% status:%s {%{REMOTE_ADDR}e|%{HTTP_USER_AGENT}e}"
+pm.max_children = 50
+pm.max_requests = 500
+pm.start_servers = 10 
+pm.min_spare_servers = 5 
+pm.max_spare_servers = 20 
+pm.process_idle_timeout = 60s
