--- a/webapp/conf.d/php/php.ini
+++ b/webapp/conf.d/php/php.ini
@@ -3,7 +3,7 @@
 ;;;;;;;;;;;;;;;;;;;
 ; Resource Limits ;
 ;;;;;;;;;;;;;;;;;;;
-memory_limit = 1024M
+memory_limit = 2048M
 max_execution_time = 300
 max_input_time = 300
 
@@ -43,6 +43,7 @@ log_errors = On
 error_reporting = E_ALL
 display_errors = Off
 display_startup_errors = Off
+xdebug.mode=off
 
 ;;;;;;;;;;;;;;;;;;;;
 ; Other Settings ;
@@ -51,3 +52,7 @@ display_startup_errors = Off
 
 ; Hide X-Powered-By header
 expose_php = Off
+
+buffer-size = 65535
+
+request_terminate_timeout = 0
