--- a/webapp/conf.d/supervisor/supervisord-dev.conf
+++ b/webapp/conf.d/supervisor/supervisord-dev.conf
@@ -23,7 +23,7 @@ stdout_logfile_maxbytes = 0
 stderr_logfile_maxbytes = 0
 
 [program:run-webapp]
-command=npm run dev --prefix /opt/webapp/
+command=npm run dev --prefix /var/www/webapp/
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
@@ -44,7 +44,7 @@ stderr_logfile_maxbytes = 0
 
 [program:queue-worker]
 process_name=%(program_name)s_%(process_num)02d
-command=php /opt/webapp/artisan queue:work --sleep=3 --tries=3 --backoff=3 --max-time=3600
+command=php /var/www/webapp/artisan queue:work --sleep=3 --tries=3 --backoff=3 --max-time=3600
 autostart=true
 autorestart=true
 stopasgroup=true
