--- a/webapp/conf.d/supervisor/supervisord.conf
+++ b/webapp/conf.d/supervisor/supervisord.conf
@@ -33,7 +33,7 @@ stderr_logfile_maxbytes = 0
 
 [program:queue-worker]
 process_name=%(program_name)s_%(process_num)02d
-command=php /opt/webapp/artisan queue:work --sleep=3 --tries=3 --backoff=3 --max-time=3600
+command=php /var/www/webapp/artisan queue:work --sleep=3 --tries=3 --backoff=3 --max-time=3600
 autostart=true
 autorestart=true
 stopasgroup=true
