--- a/webapp/.env.example
+++ b/webapp/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Geoglify
 APP_ENV=local
-APP_KEY=base64:fk/SXBB/v9eHj4vBPv1BMZWPvRULvEifdiHBrz2jKIQ=
+APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
@@ -23,8 +23,8 @@ DB_CONNECTION=pgsql
 DB_HOST=database
 DB_PORT=5432
 DB_DATABASE=geoglify
-DB_USERNAME=postgres
-DB_PASSWORD=postgres2024
+DB_USERNAME=dbadmin
+DB_PASSWORD=geoglify2024
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -65,13 +65,17 @@ VITE_APP_NAME="${APP_NAME}"
 
 LDAP_LOGGING=true
 LDAP_CONNECTION=default
-LDAP_HOST=ldap
-LDAP_USERNAME="admin,dc=geoglify,dc=com"
-LDAP_PASSWORD=geoglify
+LDAP_HOST=127.0.0.1
+LDAP_USERNAME="dc=example,dc=in"
+LDAP_PASSWORD=secret
 LDAP_PORT=389
-LDAP_BASE_DN="DC=geoglify,DC=com"
+LDAP_BASE_DN="dc=example,dc=in"
 LDAP_TIMEOUT=5
 LDAP_SSL=false
 LDAP_TLS=false
 LDAP_DOMAIN=geoglify.com
-LDAP_ENABLED=true
+
+MAP_CENTER_LONGITUDE=-8.6967744
+MAP_CENTER_LATITUDE=41.1851408
+MAP_ZOOM=12
+MAP_BEARING=33
