--- a/webapp/package.json
+++ b/webapp/package.json
@@ -20,9 +20,13 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
+        "@mapbox/mapbox-gl-draw": "^1.4.3",
+        "@turf/turf": "^7.1.0",
         "@vitejs/plugin-vue": "^5.1.2",
         "maplibre-gl": "^4.6.0",
+        "signature_pad": "^5.0.3",
         "vue": "^3.4.38",
+        "vue-country-flag-next": "^2.3.2",
         "vue-router": "^4.4.3",
         "vuetify": "^3.7.0"
     }
