--- a/webapp/.env.example
+++ b/webapp/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Geoglify
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:NH2iPprKXBHl4ISQq3IgG5s7y1oQgjcR/P9uG3BuguM=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
@@ -32,7 +32,7 @@ SESSION_ENCRYPT=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
 
-BROADCAST_CONNECTION=log
+BROADCAST_CONNECTION=reverb
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
@@ -41,8 +41,8 @@ CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_CLIENT=phpredis
-REDIS_HOST=127.0.0.1
+REDIS_CLIENT=predis
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
@@ -79,3 +79,15 @@ MAP_CENTER_LONGITUDE=-8.6967744
 MAP_CENTER_LATITUDE=41.1851408
 MAP_ZOOM=12
 MAP_BEARING=33
+
+REVERB_APP_ID=992242
+REVERB_APP_KEY=en8yyrgsls5thppvykwq
+REVERB_APP_SECRET=vfoanhid8p2f6suvbizv
+REVERB_HOST="localhost"
+REVERB_PORT=8080
+REVERB_SCHEME=http
+
+VITE_REVERB_APP_KEY="${REVERB_APP_KEY}"
+VITE_REVERB_HOST="${REVERB_HOST}"
+VITE_REVERB_PORT="${REVERB_PORT}"
+VITE_REVERB_SCHEME="${REVERB_SCHEME}"
