--- a/webapp/conf.d/supervisor/supervisord-dev.conf
+++ b/webapp/conf.d/supervisor/supervisord-dev.conf
@@ -55,3 +55,30 @@ redirect_stderr=true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stopwaitsecs=3600
+
+[program:reverb-worker]
+process_name=%(program_name)s_%(process_num)02d
+command=php /var/www/webapp/artisan reverb:start --debug
+autostart=true
+stopasgroup=true
+killasgroup=true
+user=root
+numprocs=1
+redirect_stderr=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stopwaitsecs=3600
+
+[program:redis-subscriber]
+process_name=%(program_name)s_%(process_num)02d
+command=php /var/www/webapp/artisan redis:subscriber
+autostart=true
+autorestart=true
+stopasgroup=true
+killasgroup=true
+user=root
+numprocs=1
+redirect_stderr=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stopwaitsecs=3600
